# calculator

./: CMakeLists.txt  CMakeSettings.json  calculator.cpp
private/src/: BinaryNode.cpp  Calc.cpp  FunctionTable.cpp  MultipleNode.cpp  Storage.cpp  SymbolTable.cpp  UnaryNode.cpp  parser.cpp  scanner.cpp
private/src/include/: BinaryNode.h  Calc.h  FunctionTable.h  MultipleNode.h  Node.h  Storage.h  SymbolTable.h  UnaryNode.h  parser.h  scanner.h
private/src/lib/: CMakeLists.txt
